# attack-surface-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/docs/: design-decisions.md  threat-model.md
results/: scan_20260205_074931.json  scan_20260205_080410.json  scan_20260205_080704.json
src/ass/: cli.py  models.py  pipeline.py
src/ass/checks/: headers.py  tls.py
src/ass/enum/: crtsh.py  resolver.py
src/ass/reporting/: console.py
src/ass/scoring/: engine.py
src/ass/utils/: http.py
tests/: test_enum_fallback.py  test_headers.py  test_scoring.py
